--- a/vue3/01.初始化应用.md
+++ b/vue3/01.初始化应用.md
@@ -7,20 +7,20 @@
 	const app = createApp(App)
 	app.mount('#app')
 
-那么 `createApp` 方法中具体做了哪些操作呢：  
+那么 `createApp` 方法中具体做了哪些操作呢？我们来看下面这段代码：  
 
 	// packages/runtime-dom/src/index.ts
 	
 	const createApp = ((...args) => {
 		// 创建 app 实例对象
 		const app = ensureRenderer().createApp(...args)
-		// 开发环境下，给 app.config 上注入一些属性和方法（暂时无需关注）
+		// 开发环境下，给 app.config 上注入一些属性和方法
 		if (__DEV__) {
 			// ......
 		}
 		// 拿到 mount 方法
 		const { mount } = app
-		// 对 mount 方法进行重写（重写的内部逻辑可以暂时不关注）
+		// 对 mount 方法进行重写
 		app.mount = (containerOrSelector) => {
 			// ......
 		}
@@ -28,10 +28,10 @@
 	})
 
 可以看到，`createApp` 方法中主要做了几件事：  
-1. 创建一个 app 实例；
+1. 创建一个 app 实例对象；
 2. 重写 app 实例上的 mount 方法。  
 
-首先我们来看看它是如何创建 app 实例的。
+首先我们来看看它是如何创建 app 实例对象的：
 
 ## 创建 app 实例
 
