--- a/vue3/01.初始化应用.md
+++ b/vue3/01.初始化应用.md
@@ -20,7 +20,7 @@
 		}
 		// 拿到 mount 方法
 		const { mount } = app
-		// 对 mount 方法进行重写
+		// 对 app.mount 方法进行重写
 		app.mount = (containerOrSelector) => {
 			// ......
 		}
@@ -131,4 +131,71 @@
 	// 对 mount 方法进行重写（重写的内部逻辑可以暂时不关注）
 	app.mount = (containerOrSelector) => {
 		// ......
+	}
+这里之所以要对 `createApp` 返回的 mount 方法进行重写，是因为这里的 app.mount 方法是针对跨平台实现的通用逻辑，也就是说无论是 web、小程序还是其他的平台都可以使用；  
+这里进行重写，实际上就是针对 web 平台进行 mount 方法的扩展吗，主要做了下面几件事：  
+1. 标准化传入的内容；
+2. 重写 app 实例上的 mount 方法  
+
+下面是具体代码：
+
+	// packages/runtime-dom/src/index.ts
+	app.mount = (containerOrSelecto) => {
+		// 对传入的内容/指定选择器进行标准化
+		const container = normalizeContainer(containerOrSelector)
+
+		if (!container) return
+    	const component = app._component
+
+		if (!isFunction(component) && !component.render && !component.template) {
+			component.template = container.innerHTML
+			if (__COMPAT__ && __DEV__) {
+				for (let i = 0; i < container.attributes.length; i++) {
+					const attr = container.attributes[i]
+					if (attr.name !== 'v-cloak' && /^(v-|:|@)/.test(attr.name)) {
+						compatUtils.warnDeprecation(
+							DeprecationTypes.GLOBAL_MOUNT_CONTAINER,
+							null
+						)
+						break
+					}
+				}
+			}
+		}
+
+		// clear content before mounting
+		container.innerHTML = ''
+		const proxy = mount(container, false, container instanceof SVGElement)
+		if (container instanceof Element) {
+			container.removeAttribute('v-cloak')
+			container.setAttribute('data-v-app', '')
+		}
+		return proxy
+	}
+
+### 标准化容器  
+`normalizeContainer` 方法中做了判断，如果传入的是选择器，会找到对应的 dom 节点并返回；
+否则会去判断 ShadowRoot
+
+	function normalizeContainer(container) {
+		if (isString(container)) {
+			const res = document.querySelector(container)
+			if (__DEV__ && !res) {
+				warn(
+					`Failed to mount app: mount target selector "${container}" returned null.`
+				)
+			}
+			return res
+		}
+		if (
+			__DEV__ &&
+			window.ShadowRoot &&
+			container instanceof window.ShadowRoot &&
+			container.mode === 'closed'
+		) {
+			warn(
+				`mounting on a ShadowRoot with \`{mode: "closed"}\` may lead to unpredictable bugs`
+			)
+		}
+		return container as any
 	}
