--- a/vue3/01.初始化应用.md
+++ b/vue3/01.初始化应用.md
@@ -102,6 +102,9 @@
 				mount(rootContainer, isHydrate, isSVG) {
 					if (!isMounted) {
 						// ...组件未挂载 走挂载组件相关逻辑
+						// 创建 vnode
+						const vnode = createVNode(rootComponent, rootProps)
+						// ......
 						return getExposeProxy(vnode.component!) || vnode.component!.proxy
 					} else if (__DEV__) {
 						// ...挂载已挂载，在dev环境下报错
@@ -133,9 +136,10 @@
 		// ......
 	}
 这里之所以要对 `createApp` 返回的 mount 方法进行重写，是因为这里的 app.mount 方法是针对跨平台实现的通用逻辑，也就是说无论是 web、小程序还是其他的平台都可以使用；  
-这里进行重写，实际上就是针对 web 平台进行 mount 方法的扩展吗，主要做了下面几件事：  
+这里进行重写，实际上就是针对 web 平台进行 mount 方法的扩展，主要做了下面几件事：  
 1. 标准化传入的内容；
-2. 重写 app 实例上的 mount 方法  
+2. 判断传入的组件是否有 render 函数/ template 模板，如果没有则取容器的 innerHTML 作为组件模板内容
+3. 重写 app 实例上的 mount 方法  
 
 下面是具体代码：
 
@@ -146,7 +150,7 @@
 
 		if (!container) return
     	const component = app._component
-
+		// 判断传入的组件是否有 render 函数 / template 模板，如果没有则取容器的 innerHTML 作为组件模板内容
 		if (!isFunction(component) && !component.render && !component.template) {
 			component.template = container.innerHTML
 			if (__COMPAT__ && __DEV__) {
@@ -175,7 +179,8 @@
 
 ### 标准化容器  
 `normalizeContainer` 方法中做了判断，如果传入的是选择器，会找到对应的 dom 节点并返回；
-否则会去判断 ShadowRoot
+否则会去判断 ShadowRoot，这里的 ShadowRoot 是 Shadow DOM 树的根节点。
+（为什么要用到 Shadow DOM 呢？）
 
 	function normalizeContainer(container) {
 		if (isString(container)) {
