--- a/算法/算法复杂度.md
+++ b/算法/算法复杂度.md
@@ -32,11 +32,36 @@
 2. 总的时间复杂度就等于量级最大的那段代码的时间复杂度；
 3. 嵌套代码的复杂度等于嵌套内外代码复杂度的乘积。
 
-# 常见复杂度量级
-* 常量阶 O(1)
-* 对数阶 O(log(n))
-* 线性阶 O(n)
-* 线性对数阶 O(nlog(n))
+# 常见时间复杂度量级
+* 常量阶 O(1)  
+只要代码的执行时间不随 n 的增大而增长，这样代码的时间复杂度我们都记作 O(1);  
+
+  ```javascript
+    let i = 0
+    let j = 1
+    let sum = i + j
+  ```  
+
+* 对数阶 O(logn)
+  ```javascript
+    let i = 0
+    while (i <= n) { i = i * 2 }
+  ```
+* 线性对数阶 O(nlogn)
+  ```javascript
+    let i = 0
+    for (let j = 0; j < n; j++) {
+      while (i <= n) { i = i * 2 }
+    }
+  ```
+* 线性阶 O(m + n)  
+代码的复杂度由两个数据的规模来决定
+  ```javascript
+    for (let i = 0; i < m; i++) {
+    }
+    for (let j = 0; j < n; j++) {
+    }
+  ```
 * 平方阶 O(n²)
 * 立方阶 O(n³)
 * n次方阶 O(nⁿ)
