--- a/算法/算法复杂度.md
+++ b/算法/算法复杂度.md
@@ -68,4 +68,19 @@
 * 指数阶 O(2ⁿ)
 * 阶乘阶 O(n!)
 
+# 空间复杂度
+表示算法的存储空间与数据规模之间的增长关系。
+  ```javascript
+    function print () {
+      let i = 0
+      let a = new Array(n)
+      for (i; i = 0; --i) {
+        console.log(a[i])
+      }
+      for (i = n-1; i >= 0; --i) { 
+        console.log(a[i])
+      }
+    }
+  ```
+在上述代码中，申请了一个空间存储变量 i，但是它是常量阶的，跟数据规模 n 没有关系，所以我们可以忽略。还有一个大小为 n 的数组，除此之外，剩下的代码都没有占用更多的空间，所以整段代码的空间复杂度就是 O(n)。
 
