--- a/算法/算法复杂度.md
+++ b/算法/算法复杂度.md
@@ -3,7 +3,8 @@
 1. 测试结果依赖测试环境性能；  
 2. 测试结果受数据规模的影响较大，比如对于小规模的测试数据，插入排序可能还比快速排序快；
 
-# 如何计算复杂度
+# 时间复杂度
+## 如何计算时间复杂度
 下面这段代码，求 1 + 2 + 3...n 的累加和：
   ```javascript
     function cal(n) {
@@ -27,12 +28,33 @@
 对于我们的例子就是 *T(n) = O(2n+2)*；
 当 n 很大时，你可以把它想象成 10000、100000。而公式中的低阶、常量、系数三部分并不左右增长趋势，所以都可以忽略。我们只需要记录一个最大量级就可以了，如果用大 O 表示法表示刚讲的那两段代码的时间复杂度，就可以记为：T(n) = O(n)；
 
-# 分析时间复杂度技巧
+## 平均情况时间复杂度
+  ```javascript
+  // n表示数组array的长度
+  function find(array, n, x) {
+    let i = 0;
+    let pos = -1;
+    for (; i < n; ++i) {
+      if (array[i] == x) {
+        pos = i;
+        break;
+      }
+    }
+    return pos;
+  }
+  ```
+对于上面的代码，查找 x 在数组 array 中的位置；
+**最好情况时间复杂度是 O(1)**  
+**最坏情况时间复杂度是 O(n)**
+而要查找的变量 x 在数组中的位置，有 n+1 种情况：在数组的 0～n-1 位置中和不在数组中。我们把每种情况下，查找需要遍历的元素个数累加起来，然后再除以 n+1，就可以得到需要遍历的元素个数的平均值简化之后，得到的平均时间复杂度就是 O(n)。
+
+
+## 分析时间复杂度技巧
 1. 只关注循环次数最多的一段代码；
 2. 总的时间复杂度就等于量级最大的那段代码的时间复杂度；
 3. 嵌套代码的复杂度等于嵌套内外代码复杂度的乘积。
 
-# 常见时间复杂度量级
+## 常见时间复杂度量级
 * 常量阶 O(1)  
 只要代码的执行时间不随 n 的增大而增长，这样代码的时间复杂度我们都记作 O(1);  
 
