--- a/算法/03-1.链表.md
+++ b/算法/03-1.链表.md
@@ -40,3 +40,8 @@
       * 内存未满，将 x 直接插入链表头部；
       * 内存已满，将链表尾部节点删除，再将 x 插入链表头部。
 
+## 链表边界条件
+* 如果链表为空时，代码是否能正常工作？
+* 如果链表只包含一个结点时，代码是否能正常工作？
+* 如果链表只包含两个结点时，代码是否能正常工作？
+* 代码逻辑在处理头结点和尾结点的时候，是否能正常工作？
