更新vue3 diff算法笔记

--- a/vue3/03.diff算法.md
+++ b/vue3/03.diff算法.md
@@ -255,19 +255,27 @@ const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentS
 	// ....以下省略
 }
 ```
-2. 遍历旧 vnode：  
+2. 遍历旧 vnode，更新/删除节点：  
+接下来我们遍历旧 vnode，对遍历到的每个旧子节点，通过 key 判断它是否存在我们在步骤 1 建立的 keyToNewIndexMap 中，记为 newIndex；  
+**2.1 如果 newIndex 不存在：**  
+则说明这个旧子节点需要被删除，那么直接执行 `unmount` 方法挂载该旧子节点；  
+**2.2 如果 newIndex 存在：**  
+执行 `patch` 方法更新对应节点；同时那么我们需要考虑这个旧子节点在新子节点中的位置；它有可能不变，也有可能被移动了；为了后续更高效的移动节点，这里需要做一些额外的准备：  
+**2.2.1 建立索引：**  
+我们这里用一个新的 newIndexToOldIndexMap 来记录旧子节点在旧 vnode 与新 vnode 中索引的对应关系。  
+newIndexToOldIndexMap 是个数组，数组长度等于 [i, e2] 区间节点的个数；数组的key(即索引)就是子节点在 keyToNewIndexMap 的索引，数组的 value(值) 就是该子节点在旧 vnode 中的索引 + 1；  
+newIndexToOldIndexMap 初始用 0 填充，在遍历过程中，会用 newIndex 的值来更新对应值，如果遍历完了仍有值为 0，则说明这个节点没有对应的旧节点，是需要被新挂载的节点；  
 举个例子：  
 `a b [c d e] f g`  
 `a b [e d c h] f g`  
-接下来我们遍历旧 vnode，对遍历到的每个旧子节点，通过 key 判断它是否存在我们在步骤 1 建立的 keyToNewIndexMap 中，记为 newIndex；  
-2.1 如果 newIndex 不存在，则说明这个旧子节点需要被删除，那么直接执行 `unmount` 方法挂载该旧子节点；  
-2.2 如果 newIndex 存在，那么我们需要考虑这个旧子节点在新子节点中的位置；它有可能不变，也有可能被移动了；  
-2.2.1 为了后续处理方便，我们这里用一个新的 newIndexToOldIndexMap 来记录旧子节点在旧 vnode 与新 vnode 中索引的对应关系。  
-newIndexToOldIndexMap 是个数组，数组长度等于 [i, e2] 区间节点的个数；数组的key(即索引)就是子节点在 keyToNewIndexMap 的索引，数组的 value(值) 就是该子节点在旧 vnode 中的索引 + 1；
-newIndexToOldIndexMap 初始用 0 填充，在遍历过程中，会用 newIndex 的值来更新对应值，如果遍历完了仍有值为 0，则说明这个节点没有对应的旧节点，是需要被新挂载的节点；  
-在这个例子中，newIndexToOldIndexMap 的最终值为:  
- `[(e): 5, (d): 4, (c): 3, (h): 0]`  ;
-
+在这个例子中，  
+keyToNewIndexMap 值为：  
+`{e: 2, d: 3, c: 4, h:5 }`  
+newIndexToOldIndexMap 的最终值为:  
+ `[(e): 5, (d): 4, (c): 3, (h): 0]`  
+**2.2.2 判断节点是否移动：**  
+我们知道 newIndex 指的是当前指针指向的旧 vnode 的节点，在新 vnode 中的位置；我们假设位置不变，那么 newIndex 应该是一直递增的一直大于等于 maxNewIndexSoFar 那么说明索引是一直递增的，没有移动；这里 vue 用一个变量 maxNewIndexSoFar 来存储最新一次求值的 newIndex，一旦 newIndex 小于 maxNewIndexSoFar 则说明节点被移动了，用变量 moved 来记录移动的情况。  
+代码如下：
 ```javascript
 const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentSuspense,isSVG,slotScopeIds,optimized) => {
 	let i = 0
@@ -374,3 +382,75 @@ const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentS
 }
 ```
 
+3. 移动节点  
+在前面的步骤中，我们已经通过变量 moved 判断出是否有需要移动的节点；  
+	1. 如果 moved 为 true，就通过 `getSequence` 将方法求得一个 **最长递增子序列 increasingNewIndexSequence**；  
+		1.1 increasingNewIndexSequence 的含义：假设值为 [1, 2]，就代表在 newIndexToOldIndexMap 中索引为 1、2 的元素满足最长递子序列；
+	2. 指针指向新 vnode 待更新部分节点的末尾，倒序遍历这部分节点(这里倒序是为了在更新节点的时候更方便，比如我们使用 `Node.insertBefore()` 方法时，我们能很方便的使用上一个更新的节点作为锚点)；  
+		2.1 如果该节点的索引在 newIndexToOldIndexMap 中对应的值为 0，那么说明这是个新节点需要挂载；  
+		2.2 接下来判断是否需要移动节点：如果我们当前指针指向的节点的索引在 increasingNewIndexSequence 中，我们就可以保持这个节点的位置不变，通过移动其它节点的位置来更高效的完成节点更新；否则就把节点移动到上一个更新的节点前
+			
+
+	代码如下：
+```javascript
+const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentSuspense,isSVG,slotScopeIds,optimized) => {
+	let i = 0
+	const l2 = c2.length
+	let e1 = c1.length - 1 // prev ending index
+	let e2 = l2 - 1 // next ending index
+
+	// 1、先从新旧两个 vnode 的头部节点开始向后比较
+	// ...省略...
+	// 2、从新旧两个 vnode 的尾部节点开始向前比较
+	// ...省略...
+	// 3、判断是否有新增的子节点
+	// ...省略...
+	// 4、判断是否有删除的子节点
+	// ...省略...
+	// 5、处理其它未知情况
+	// 5.1、更新/删除子节点
+	// ...省略..
+	// 5.2、 挂载新子节点/移动子节点
+	// 如果存在需要移动的情况
+	// 通过 getSequence 方法求出一个最长递增子序列 increasingNewIndexSequence
+	// 那么索引存在 increasingNewIndexSequence 的元素就不需要移动
+	// 而其它索引不在最长递增子序列中的元素就需要移动
+	// 这样一来就能达到用最少的消耗（移动）来更新 dom 的目的
+	const increasingNewIndexSequence = moved
+		? getSequence(newIndexToOldIndexMap)
+		: EMPTY_ARR
+	j = increasingNewIndexSequence.length - 1
+	// looping backwards so that we can use last patched node as anchor
+	// 为什么要反向遍历？
+	for (i = toBePatched - 1; i >= 0; i--) {
+		const nextIndex = s2 + i
+		const nextChild = c2[nextIndex] as VNode
+		const anchor =
+			nextIndex + 1 < l2 ? (c2[nextIndex + 1] as VNode).el : parentAnchor
+		if (newIndexToOldIndexMap[i] === 0) {
+			// mount new
+			patch(
+				null,
+				nextChild,
+				container,
+				anchor,
+				parentComponent,
+				parentSuspense,
+				isSVG,
+				slotScopeIds,
+				optimized
+			)
+		} else if (moved) {
+			// move if:
+			// There is no stable subsequence (e.g. a reverse)
+			// OR current node is not among the stable sequence
+			if (j < 0 || i !== increasingNewIndexSequence[j]) {
+				move(nextChild, container, anchor, MoveType.REORDER)
+			} else {
+				j--
+			}
+		}
+	}
+	// ....以下省略
+}
+```
