--- a/vue3/03.diff算法.md
+++ b/vue3/03.diff算法.md
@@ -385,13 +385,30 @@ const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentS
 3. 移动节点  
 在前面的步骤中，我们已经通过变量 moved 判断出是否有需要移动的节点；  
 	1. 如果 moved 为 true，就通过 `getSequence` 将方法求得一个 **最长递增子序列 increasingNewIndexSequence**；  
-		1.1 increasingNewIndexSequence 的含义：假设值为 [1, 2]，就代表在 newIndexToOldIndexMap 中索引为 1、2 的元素满足最长递子序列；
+		1.1 increasingNewIndexSequence 的含义：假设值为 [1, 2]，就代表在 newIndexToOldIndexMap 中索引为 1、2 的元素满足最长递增子序列；
 	2. 指针指向新 vnode 待更新部分节点的末尾，倒序遍历这部分节点(这里倒序是为了在更新节点的时候更方便，比如我们使用 `Node.insertBefore()` 方法时，我们能很方便的使用上一个更新的节点作为锚点)；  
 		2.1 如果该节点的索引在 newIndexToOldIndexMap 中对应的值为 0，那么说明这是个新节点需要挂载；  
-		2.2 接下来判断是否需要移动节点：如果我们当前指针指向的节点的索引在 increasingNewIndexSequence 中，我们就可以保持这个节点的位置不变，通过移动其它节点的位置来更高效的完成节点更新；否则就把节点移动到上一个更新的节点前
+		2.2 接下来判断是否需要移动节点：如果我们当前指针指向的节点的索引在 increasingNewIndexSequence 中，我们就可以保持这个节点的位置不变，通过移动其它节点的位置来更高效的完成节点更新；否则就把节点移动到上一个更新的节点前。
 			
+举个例子：  
+**vNode1(旧vnode):**  
+`a b [c d e] f g`  
+**vNode2(新vnode):**   
+`a b [e c d] f g`  
+在这个例子中，  
+1. keyToNewIndexMap 值为：  
+`{e: 2, c: 3, d: 4 }`  
+2. newIndexToOldIndexMap 的最终值为:  
+ `[(e): 5, (c): 3, (d): 4]`  
+3. increasingNewIndexSequence 值为：  
+ `[1, 2]`   
+4. 声明指针 i 指向 vNode2 `[e c d]` 区间尾部子节点 h；声明指针 j 指向 increasingNewIndexSequence 数组最后一个元素；    
+	4.1 `i--`倒序遍历 vNode2 中 `[e c d]` 区间子节点，判断 i 是否等于 `increasingNewIndexSequence[j]`(即判断 i 当前指向的元素是否满足最长递增子序列)；    
+	4.2 当 i 指向 d、c 时满足， `j--`
+	4.3 当 i 指向 e 时不满足，此时就需要将 vNode1 中的 e子节点，移动到最后一次更新的子节点(在这里为 c 子节点)前。
 
-	代码如下：
+
+具体代码如下：
 ```javascript
 const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentSuspense,isSVG,slotScopeIds,optimized) => {
 	let i = 0
@@ -445,6 +462,7 @@ const patchKeyedChildren = (c1,c2,container,parentAnchor,parentComponent,parentS
 			// There is no stable subsequence (e.g. a reverse)
 			// OR current node is not among the stable sequence
 			if (j < 0 || i !== increasingNewIndexSequence[j]) {
+				// 将 nextChild 节点 插入到 anchor 节点前
 				move(nextChild, container, anchor, MoveType.REORDER)
 			} else {
 				j--
