--- a/vue3/05.reactive原理.md
+++ b/vue3/05.reactive原理.md
@@ -58,37 +58,11 @@ function reactive(target) {
 }
 
 function createReactiveObject(target, isReadonly, baseHandlers, collectionHandlers, proxyMap) {
-  // 3. 判断 target 是不是对象/数组类型，如果不是在 dev 环境下会抛出警告并返回
-  if (!isObject(target)) {
-    if (__DEV__) {
-      console.warn(`value cannot be made reactive: ${String(target)}`)
-    }
-    return target
-  }
-  // 4. 判断 target 上有没有 __v_raw 属性(有则说明已经被 Proxy 代理过了)，如果有，并且 (isReadonly 和 target[ReactiveFlags.IS_REACTIVE]) 为 同时false
-  // 则直接返回 target
-  if (
-    target[ReactiveFlags.RAW] &&
-    !(isReadonly && target[ReactiveFlags.IS_REACTIVE])
-  ) {
-    return target
-  }
-  // 5. 这里的 proxyMap 是一个 WeakMap， map 的键是 target，值是通过 new Proxy 代理 target 后的返回对象
-  // 如果 target 已经被代理过，则直接返回代理过的对象
-  const existingProxy = proxyMap.get(target)
-  if (existingProxy) {
-    return existingProxy
-  }
-  // 6. 判断 target 的类型是否可以变为响应式对象
-  // 只有 Object、Array、Map、Set、WeakMap、WeakSet 这几种类型可以通过 reactive api 变为响应式对象
-  const targetType = getTargetType(target)
-  if (targetType === TargetType.INVALID) {
-    return target
-  }
-  // 7. 通过 new Proxy 劫持 target 将它变为响应式对象
+  //...省略...
+  // 通过 new Proxy 劫持 target 将它变为响应式对象
   // 并通过 proxyMap.set(target, proxy) 记录在 WeakMap 中
-  // 这里如果 target 是 Map/Set/WeakMap/WeakSet 则 Proxy 的 handler 为 collectionHandlers(mutableCollectionHandlers)
-  // 如果 target 是 Object/Array 则 Proxy 的 handler 为 baseHandlers(mutableHandlers)
+  // 这里如果 target 是 Map/Set/WeakMap/WeakSet 则 Proxy 的第二个参数 handler 为 collectionHandlers(mutableCollectionHandlers)
+  // 如果 target 是 Object/Array 则 Proxy 的第二个参数 handler 为 baseHandlers(mutableHandlers)
   const proxy = new Proxy(
     target,
     targetType === TargetType.COLLECTION ? collectionHandlers : baseHandlers
@@ -100,4 +74,142 @@ function createReactiveObject(target, isReadonly, baseHandlers, collectionHandle
 function isReadonly(value) {
   return !!(value && value[ReactiveFlags.IS_READONLY])
 }
+```
+
+1. 首先判断 target 上有没有 __v_isReadonly 属性，如果有则直接返回 target 对象，不进行后续操作；
+2. 通过 createReactiveObject 函数，将 target 传入
+3. 在 createReactiveObject 函数中，我们先来看最关键的 Proxy 代理部分:   
+这里如果 target 是 `Map/Set/WeakMap/WeakSet` 则 Proxy 的第二个参数 handler 为 collectionHandlers（在这里就是 **mutableCollectionHandlers**）；如果 target 是 Object/Array 则 Proxy 的第二个参数 handler 为 baseHandlers（在这里就是 **mutableHandlers**）  
+
+在研究 createReactiveObject 的剩余代码前，我们先来看一下 Proxy 中代理的 get （用于拦截对象读取属性的方法）
+``` javascript
+// 通过 createGetter 返回 get 方法
+const get = /*#__PURE__*/ createGetter()
+
+// mutableHandlers 中代理了 get（读取属性）、set（设置）、deleteProperty（删除属性）、has（in 操作符）、ownKeys（读取key） 这些方法
+// 我们主要来看 get 的逻辑
+export const mutableHandlers: ProxyHandler<object> = {
+  get,
+  set,
+  deleteProperty,
+  has,
+  ownKeys
+}
+function createGetter(isReadonly = false, shallow = false) {
+  return function get(target: Target, key: string | symbol, receiver: object) {
+    // ReactiveFlags.IS_REACTIVE 表示了当前对象是否是个响应式对象
+    // 当读取 __v_isReactive 时会返回 isReadonly 的取反，因此我们使用 reactive api 时这个值默认是 true
+    if (key === ReactiveFlags.IS_REACTIVE) {
+      return !isReadonly
+    } else if (key === ReactiveFlags.IS_READONLY) { // 当读取 __v_isReadonly 返回 isReadonly 的值，我们使用 reactive api 时这个值默认是 false（使用 readonly api 时为 true）
+      return isReadonly
+    } else if (key === ReactiveFlags.IS_SHALLOW) { // ReactiveFlags.IS_SHALLOW 默认为false
+      return shallow
+    } else if (
+      key === ReactiveFlags.RAW &&
+      receiver ===
+        (isReadonly
+          ? shallow
+            ? shallowReadonlyMap
+            : readonlyMap
+          : shallow
+          ? shallowReactiveMap
+          : reactiveMap
+        ).get(target)
+    ) {
+      // 这里的逻辑是用来判断 target 是否已经被代理过？
+      // receiver = reactiveMap，这里的 reactiveMap 是我们在使用 createReactiveObject 方法时传入的一个 weakMap，target 通过 Proxy 代理后，就会 set 到这个 map 中
+      return target
+    }
+    // 判断 target 是不是数组
+    const targetIsArray = isArray(target)
+
+    if (!isReadonly && targetIsArray && hasOwn(arrayInstrumentations, key)) {
+      return Reflect.get(arrayInstrumentations, key, receiver)
+    }
+
+    // 对 target[key] 的访问求值
+    const res = Reflect.get(target, key, receiver)
+
+    if (isSymbol(key) ? builtInSymbols.has(key) : isNonTrackableKeys(key)) {
+      return res
+    }
+
+    if (!isReadonly) {
+      track(target, TrackOpTypes.GET, key)
+    }
+
+    if (shallow) {
+      return res
+    }
+
+    if (isRef(res)) {
+      // ref unwrapping - skip unwrap for Array + integer key.
+      return targetIsArray && isIntegerKey(key) ? res : res.value
+    }
+
+    // 如果 target[key] 的值是个对象
+    // 那么判断 target[key] 的值是否是只读属性，如果不是只读属性，会继续通过 reactive api 将其做 Proxy 代理，转化为响应式属性
+    // 这里与 vue2 的响应式有很大的不同，vue2 中是一开始就使用 Objec.defineProperty 属性递归将 data 中的数据全部变为响应式属性
+    // 而 vue3 中，只有访问了这个属性才会将其变为响应式，举个例子：
+    // const obj = reactive({ 
+    //    value: { a:1, b:2 },
+    //    value2: 1
+    // })
+    // 使用 reactive api 后，对 obj 的访问、赋值等操作都会被 Proxy 拦截，但是如果我们在模板只访问了 obj.value2，那么 obj.value 就不是响应式的
+    // 只有在我们访问了 obj.value 后，才会对 obj.value 下的值的操作做 Proxy 代理
+    if (isObject(res)) {
+      // Convert returned value into a proxy as well. we do the isObject check
+      // here to avoid invalid value warning. Also need to lazy access readonly
+      // and reactive here to avoid circular dependency.
+      return isReadonly ? readonly(res) : reactive(res)
+    }
+
+    return res
+  }
+}
+```
+
+``` javascript
+function createReactiveObject(target, isReadonly, baseHandlers, collectionHandlers, proxyMap) {
+  // 1. 判断 target 是不是对象/数组类型，如果不是在 dev 环境下会抛出警告并返回
+  if (!isObject(target)) {
+    if (__DEV__) {
+      console.warn(`value cannot be made reactive: ${String(target)}`)
+    }
+    return target
+  }
+  // 2.如果 target 已经被 proxy 代理过，那么这里的 if 判断去读取 target 上的值时就会触发 proxy 的 get 逻辑；
+  // 根据之前 proxy 代理的 get 逻辑：
+  // 2.1 对 target[ReactiveFlags.RAW] 的访问，将直接返回 target 对象本身
+  // 2.2 而 isReadonly 为 false，target[ReactiveFlags.IS_REACTIVE] 则返回 true
+  // 2.3 因此，如果 target 已经被 proxy 代理过是个响应式对象了，就会则直接返回 target 本身；
+  if (
+    target[ReactiveFlags.RAW] &&
+    !(isReadonly && target[ReactiveFlags.IS_REACTIVE])
+  ) {
+    return target
+  }
+  // 3. 这里的 proxyMap 是一个 WeakMap， map 的键是 target，值是通过 new Proxy 代理 target 后的返回对象
+  // 同样用来判断如果 target 已经被代理过，则直接返回代理过的对象
+  const existingProxy = proxyMap.get(target)
+  if (existingProxy) {
+    return existingProxy
+  }
+  // 4. 判断 target 的类型是否可以变为响应式对象
+  // 只有 Object、Array、Map、Set、WeakMap、WeakSet 这几种类型可以通过 reactive api 变为响应式对象
+  const targetType = getTargetType(target)
+  if (targetType === TargetType.INVALID) {
+    return target
+  }
+  // 5. 最后，如果上述判断没有命中，则通过 new Proxy 劫持 target 将它变为响应式对象
+  // 并通过 proxyMap.set(target, proxy) 记录在 WeakMap 中
+  const proxy = new Proxy(
+    target,
+    targetType === TargetType.COLLECTION ? collectionHandlers : baseHandlers
+  )
+  proxyMap.set(target, proxy)
+  return proxy
+}
+
 ``
