--- a/vue3/05.reactive原理.md
+++ b/vue3/05.reactive原理.md
@@ -156,8 +156,8 @@ function createGetter(isReadonly = false, shallow = false) {
     //    value: { a:1, b:2 },
     //    value2: 1
     // })
-    // 使用 reactive api 后，对 obj 的访问、赋值等操作都会被 Proxy 拦截，但是如果我们在模板只访问了 obj.value2，那么 obj.value 就不是响应式的
-    // 只有在我们访问了 obj.value 后，才会对 obj.value 下的值的操作做 Proxy 代理
+    // 使用 reactive api 后，对 obj 的访问、赋值等操作都会被 Proxy 拦截，但是如果我们在代码中只访问了 value2，那么 value 的值就不是响应式的
+    // 只有我们在代码中访问了 value 后，才会对 value 下的操作做 Proxy 代理
     if (isObject(res)) {
       // Convert returned value into a proxy as well. we do the isObject check
       // here to avoid invalid value warning. Also need to lazy access readonly
