update vue3 reactive

--- a/vue3/05.reactive原理.md
+++ b/vue3/05.reactive原理.md
@@ -30,7 +30,7 @@
 
 在上面这段代码里，我们可以通过 `reactive` 语法将 value 变为一个响应式对象，当我们点击 button，`value.a` 的值就会改变，从而导致 template 的重新渲染；这就是 vue 响应式的特征。  
 那么 `reactive` 是如何实现的呢？下面一起来看一下：
-## reactive
+## reactive api
 reactive api 相关代码：  
 ``` javascript
 // 文件路径 packages/reactivity/src/reactive.ts
@@ -82,6 +82,7 @@ function isReadonly(value) {
 这里如果 target 是 `Map/Set/WeakMap/WeakSet` 则 Proxy 的第二个参数 handler 为 collectionHandlers（在这里就是 **mutableCollectionHandlers**）；如果 target 是 Object/Array 则 Proxy 的第二个参数 handler 为 baseHandlers（在这里就是 **mutableHandlers**）  
 
 在研究 createReactiveObject 的剩余代码前，我们先来看一下 Proxy 中代理的 get （用于拦截对象读取属性的方法）
+## Proxy 代理拦截
 ``` javascript
 // 通过 createGetter 返回 get 方法
 const get = /*#__PURE__*/ createGetter()
@@ -136,6 +137,7 @@ function createGetter(isReadonly = false, shallow = false) {
     }
 
     if (!isReadonly) {
+      // 针对 target 进行依赖收集
       track(target, TrackOpTypes.GET, key)
     }
 
@@ -169,7 +171,8 @@ function createGetter(isReadonly = false, shallow = false) {
   }
 }
 ```
-
+接下来我们继续探究 createReactiveObject 方法剩余逻辑：
+## 创建响应式对象
 ``` javascript
 function createReactiveObject(target, isReadonly, baseHandlers, collectionHandlers, proxyMap) {
   // 1. 判断 target 是不是对象/数组类型，如果不是在 dev 环境下会抛出警告并返回
@@ -212,4 +215,88 @@ function createReactiveObject(target, isReadonly, baseHandlers, collectionHandle
   return proxy
 }
 
-``
+```
+
+## track 依赖收集
+响应式原理中很关键的一环在于：当我们数据改变时，我要去通知到使用了这些数据的地方；  
+这就需要我们为这个数据和使用到该数据的地方建立联系，也就是我们常说的依赖收集；这样一旦数据改变，我们就可以快速匹配到对应的依赖进行更新。
+``` html
+<html>
+  <body>
+    <div id="app">
+      <button @click="handleInput"> {{ c.value }} </button>
+    </div>
+  </body>
+  <script>
+    const { createApp, reactive } = Vue;
+    const c = reactive({ value: 1 })
+    const app = createApp({
+      setup() {
+        const handleInput = () => {
+          c.value++
+        }
+        return {
+          c
+        }
+      }
+    });
+    app.mount("#app");
+  </script>
+</html>
+```
+
+``` javascript
+// 为 target 和被使用到的 key 建立 map
+// {{value: 1}}
+export function track(target: object, type: TrackOpTypes, key: unknown) {
+  // 这里的 activeEffect 就是会导致对应组件重新渲染的副作用函数
+  if (shouldTrack && activeEffect) {
+    // targetMap (详见下方图片):  
+    // 键为 target 本身，值仍是一个 map，我们称为为 depsMap;
+    // depsMap 的键为被访问的 key，值为这个 key 的依赖（也就是当这个 key 改变时需要被通知到的哪些地方，比如计算属性、template模板等）
+    let depsMap = targetMap.get(target)
+    if (!depsMap) {
+      targetMap.set(target, (depsMap = new Map()))
+    }
+    let dep = depsMap.get(key)
+    if (!dep) {
+      depsMap.set(key, (dep = createDep()))
+    }
+
+    const eventInfo = __DEV__
+      ? { effect: activeEffect, target, type, key }
+      : undefined
+
+    trackEffects(dep, eventInfo)
+  }
+}
+// 将当前 active 的副作用函数 收集为 target 中对应 key 的依赖
+export function trackEffects(
+  dep: Dep,
+  debuggerEventExtraInfo?: DebuggerEventExtraInfo
+) {
+  let shouldTrack = false
+  if (effectTrackDepth <= maxMarkerBits) {
+    if (!newTracked(dep)) {
+      dep.n |= trackOpBit // set newly tracked
+      shouldTrack = !wasTracked(dep)
+    }
+  } else {
+    // Full cleanup mode.
+    shouldTrack = !dep.has(activeEffect!)
+  }
+
+  if (shouldTrack) {
+    dep.add(activeEffect!)
+    activeEffect!.deps.push(dep)
+    if (__DEV__ && activeEffect!.onTrack) {
+      activeEffect!.onTrack({
+        effect: activeEffect!,
+        ...debuggerEventExtraInfo!
+      })
+    }
+  }
+}
+```
+targetMap
+![targetMap](image/05.reactive原理/1675866709562.png)
