--- a/vue3/05.reactive原理-2.md
+++ b/vue3/05.reactive原理-2.md
@@ -1,1 +1,104 @@
 # reactive 原理-派发更新
+在 reactive 代理&依赖收集中我们知道，vue3 使用 Proxy 劫持了数据对象，当更新被劫持对象的值时就会走到 set 逻辑，我们来看一下 set 逻辑的实现：
+
+## set 函数
+```javascript
+const set = /*#__PURE__*/ createSetter()
+
+function createSetter(shallow = false) {
+  return function set(
+    target: object,
+    key: string | symbol,
+    value: unknown,
+    receiver: object
+  ): boolean {
+    let oldValue = (target as any)[key]
+    if (isReadonly(oldValue) && isRef(oldValue) && !isRef(value)) {
+      return false
+    }
+    if (!shallow) {
+      if (!isShallow(value) && !isReadonly(value)) {
+        oldValue = toRaw(oldValue)
+        value = toRaw(value)
+      }
+      if (!isArray(target) && isRef(oldValue) && !isRef(value)) {
+        oldValue.value = value
+        return true
+      }
+    } else {
+      // in shallow mode, objects are set as-is regardless of reactive or not
+    }
+
+    const hadKey =
+      isArray(target) && isIntegerKey(key)
+        ? Number(key) < target.length
+        : hasOwn(target, key)
+    // 通过 Reflect.set 求值
+    const result = Reflect.set(target, key, value, receiver)
+    // don't trigger if target is something up in the prototype chain of original
+    if (target === toRaw(receiver)) {
+      // 判断 key 是否存在于 target 上
+      // 不存在则执行 ADD 新增操作，存在则执行 SET 修改操作
+      if (!hadKey) {
+        // 通过 trigger 函数派发通知
+        trigger(target, TriggerOpTypes.ADD, key, value)
+      } else if (hasChanged(value, oldValue)) {
+        trigger(target, TriggerOpTypes.SET, key, value, oldValue)
+      }
+    }
+    return result
+  }
+}
+```
+set 函数主要做了两件事：  
+1. 通过 `Reflect.set` 求值；
+2. 通过 `trigger` 函数派发更新；  
+下面我们来看看 trigger 函数派发更新的具体流程：  
+
+## trigger 派发更新
+trigger 函数的实现也很简单，主要做了四件事情：
+```javascript
+// 原始数据对象 map
+const targetMap = new WeakMap()
+function trigger(target, type, key, newValue) {
+  // 通过 targetMap 拿到 target 对应的依赖集合
+  const depsMap = targetMap.get(target)
+  if (!depsMap) {
+    // 没有依赖，直接返回
+    return
+  }
+  // 创建运行的 effects 集合
+  const effects = new Set()
+  // 添加 effects 的函数
+  const add = (effectsToAdd) => {
+    if (effectsToAdd) {
+      effectsToAdd.forEach(effect => {
+        effects.add(effect)
+      })
+    }
+  }
+  // SET | ADD | DELETE 操作之一，添加对应的 effects
+  if (key !== void 0) {
+    add(depsMap.get(key))
+  }
+  const run = (effect) => {
+    // 调度执行
+    if (effect.options.scheduler) {
+      effect.options.scheduler(effect)
+    }
+    else {
+      // 直接运行
+      effect()
+    }
+  }
+  // 遍历执行 effects
+  effects.forEach(run)
+}
+```
+1. 通过 targetMap 拿到 target 对应的依赖集合 depsMap；
+2. 创建运行的 effects 集合；
+3. 根据 key 从 depsMap 中找到对应的 effects 添加到 effects 集合；
+4. 遍历 effects 执行相关的副作用函数。  
+
+## 副作用函数
+所谓副作用函数，就是当数据改变时我们希望执行的函数；但是
