--- a/vue3/05.reactive原理-2.md
+++ b/vue3/05.reactive原理-2.md
@@ -101,4 +101,4 @@ function trigger(target, type, key, newValue) {
 4. 遍历 effects 执行相关的副作用函数。  
 
 ## 副作用函数
-所谓副作用函数，就是当数据改变时我们希望执行的函数；但是
+所谓副作用函数，就是当数据改变时我们希望执行的函数；
