--- a/低代码/低代码平台调研报告.md
+++ b/低代码/低代码平台调研报告.md
@@ -27,9 +27,9 @@ amis是一个由百度开源的前端低代码框架，基于 React 的组件化
 
    由于 amis 内置组件的风格与公司现有项目 UI 风格不同，可能需要大批量的自定义组件以适配现有设计风格，有以下几种方案：
 
-    	1. 使用 js sdk 开发
-    	2. 使用官方自定义组件脚手架[amis-widget-cli](https://github.com/aisuda/amis-widget-cli) ；官方同时提供了 vue 版本：[vue2-amis-custom-widget](https://github.com/aisuda/vue2-amis-custom-widget)，但目前看来使用人数较少，
-    	3. 参照 [issues](https://github.com/baidu/amis/issues/31)；
+   	1. 使用 js sdk 开发
+   	1. 使用官方自定义组件脚手架[amis-widget-cli](https://github.com/aisuda/amis-widget-cli) ；官方同时提供了 vue 版本：[vue2-amis-custom-widget](https://github.com/aisuda/vue2-amis-custom-widget)，但目前看来使用人数较少，
+   	1. 参照 [issues](https://github.com/baidu/amis/issues/31)；
 
 3. **项目兼容性：**
 
@@ -48,6 +48,142 @@ amis是一个由百度开源的前端低代码框架，基于 React 的组件化
 
 
 #### demo展示
+
+#### 接入方式：
+
+1. 底层封装借助 ReactDOM 直接渲染，相关代码：
+
+```vue
+<template lang="pug">
+  div(ref="renderBox")
+</template>
+
+<script>
+import 'amis/lib/themes/default.css'
+import { alert, confirm, render as renderSchema, toast } from 'amis'
+import * as ReactDOM from 'react-dom/client'
+export default {
+  name: 'Amis',
+  props: {
+    schema: {
+      type: Object,
+      required: false,
+      default: function () {
+        return {}
+      }
+    },
+    onAction: {
+      type: Function,
+      required: false,
+      default: () => {}
+    }
+  },
+  data () {
+    return {
+      theme: 'default'
+      // theme: element
+    }
+  },
+  watch: {
+    schema: function (newSchema, oldSchema) {
+      this.initPage(newSchema)
+    }
+  },
+  mounted () {
+    this.initPage(this.schema)
+  },
+  methods: {
+    initPage (schema) {
+      const root = ReactDOM.createRoot(this.$refs.renderBox)
+      const element = renderSchema(
+        // 页面配置
+        schema,
+        //
+        {
+          onAction: this.onAction || this.handleAction,
+          theme: this.theme
+        },
+        // 环境变量，可以理解为这个渲染器工具的配置项
+        this.env
+      )
+      root.render(element)
+    },
+    handleAction (e, action) {
+      this.env.alert(`没有识别的动作：${JSON.stringify(action)}`)
+    }
+  }
+}
+</script>
+
+```
+
+存在问题：编译速度很慢；热更新失效。
+
+2. sdk 方式引入：
+
+   通过 `npm i amis` 下载包后直接在 main.js 文件中引入会报错：
+
+   ![image-20230313224020095](./asserts/sdk-error.png)
+
+   猜测原因可能在于 webpack 打包，参见 [issues](https://github.com/baidu/amis/issues/2709)，下面是相关代码：
+
+   ```javascript
+   // main.js
+   
+   import 'amis/sdk/sdk.js'
+   import 'amis/sdk/sdk.css'
+   import 'amis/sdk/helper.css'
+   import 'amis/sdk/iconfont.css'
+   ```
+
+   ```vue
+   // sdk.vue
+   <template>
+     <div class="home">
+       <div ref="renderBox" />
+     </div>
+   </template>
+   
+   <script>
+   export default {
+     name: 'Home',
+     props: {
+       schema: {
+         type: Object,
+         required: false,
+         default: function () {
+           return {}
+         }
+       },
+       onAction: {
+         type: Function,
+         required: false,
+         default: () => {}
+       }
+     },
+     watch: {
+       schema: function (newSchema, oldSchema) {
+         this.initPage(newSchema)
+       }
+     },
+     mounted () {
+       this.initPage({})
+     },
+     methods: {
+       // 渲染函数
+       initPage (jsonSchema) {
+         const amis = window.amisRequire('amis/embed')
+         // console.log(amis, this.$refs.renderWrap, amisJSON)
+         amis.embed(this.$refs.renderBox, jsonSchema)
+       }
+     }
+   }
+   </script>
+   ```
+
+   解决方案：将 sdk 文件下载后放在 public 文件夹下，通过 index.html script 引入；
+
+3.  vuera 转换
 
 需求场景1：
 
@@ -93,9 +229,9 @@ github：
 
 1. **JSON 配置/可视化编辑生成页面：**amis 使用 JSON 配置文件来描述页面结构和数据模型；同时提供可视化编辑器
 
-3. **丰富的组件库：**amis 自带了一套组件库，内置了一百多种常见的组件：包括容器组件、表单组件、列表组件、图表组件等等，能够应对大部分的 CURD 场景。
+2. **丰富的组件库：**amis 自带了一套组件库，内置了一百多种常见的组件：包括容器组件、表单组件、列表组件、图表组件等等，能够应对大部分的 CURD 场景。
 
-4. **扩展机制：**amis 提供了完善的扩展机制，如果 amis 自带的组件库无法满足业务需求，开发人员可以通过自定义组件（需要掌握 React ）、样式、主题等方式来扩展框架的功能和样式。
+3. **扩展机制：**amis 提供了完善的扩展机制，如果 amis 自带的组件库无法满足业务需求，开发人员可以通过自定义组件（需要掌握 React ）、样式、主题等方式来扩展框架的功能和样式。
 
 相较于 amis ，Variant Form 和 FormMaking 这两款产品在提供的功能上逊色许多，但是其本身是基于 vue + element 开发，因此针对 vue/ uniapp 项目无需做额外的组件转换及UI处理就能接入，对公司项目的兼容更加友好；
 
