--- a/js/创建对象.md
+++ b/js/创建对象.md
@@ -68,6 +68,24 @@
 ## 原型的特性
 * 只要创建了一个函数，就会创造一个 prototype 属性，指向原型对象；
 * 原型对象会获得一个 constructor 属性，指向关联的构造函数，也就是 `Person.prototype.constructor` 指向 Person；
+* 实例的 constructor 属性指向它的构造函数，也就是 `person.constructor === Person`，但是一旦 Person 的 prototype 属性被改写，会导致 constructor 的指向丢失：  
+  ```js
+    function Person() {}
+    // 这里没有给 prototype 添加属性，而是完全重写了 prototype 默认值
+    Person.prototype = {
+      name: "Nicholas",
+      age: 29,
+      job: "Software Engineer",
+      sayName() {
+        console.log(this.name);
+      }
+    };
+    let friend = new Person();
+    console.log(friend instanceof Object);        // true
+    console.log(friend instanceof Person);        // true
+    console.log(friend.constructor == Person);   // false
+    console.log(friend.constructor == Object);   // true
+  ```
 * 在自定义构造函数时，原型对象默认只会获得 constructor 属性，其他的所有方法都继承自 Object。
 * 当调用构造函数创建一个实例时（也就是 `const person = new Person` 时），这个实例 person 上就会有一个内部属性 `[[prototype]]` 指向构造函数的原型对象，也就是指向 `Person.prototype`；  
   * 这个内部属性 `[[prototype]]` 可以通过 `__proto__` 或者 `Object.getPrototypeOf()` （更推荐这种，因为 前一种方式已经废弃）来访问；
@@ -115,4 +133,27 @@
     p1.age = 31;
     let p1keys = Object.keys(p1);
     console.log(p1keys); // "[name,age]"
+  ```
+## 缺点
+* 原型模式缺少向构造函数初始化参数的能力，所有实例的默认值都是相同的，不能够定制化；
+* 原型的最主要问题源自它的共享特性：
+  ```js
+    function Person() {}
+    Person.prototype = {
+      constructor: Person,
+      name: "Nicholas",
+      age: 29,
+      job: "Software Engineer",
+      friends: ["Shelby", "Court"],
+      sayName() {
+        console.log(this.name);
+      }
+    };
+    let person1 = new Person();
+    let person2 = new Person();
+    // 实例 person1 向原型上的数组push了一个属性，会影响所有的实例
+    person1.friends.push("Van");
+    console.log(person1.friends);   // "Shelby,Court,Van"
+    console.log(person2.friends);   // "Shelby,Court,Van"
+    console.log(person1.friends === person2.friends);   // true
   ```
