--- a/js/创建对象.md
+++ b/js/创建对象.md
@@ -66,7 +66,7 @@
 原来在构造函数中直接赋给对象实例的值，可以直接赋值给它们的原型。
 
 ## 原型的特性
-* 只要创建了一个函数，就会创造一个 prototype 属性，指向原型对象；
+* **只要创建了一个函数，就会创造一个 prototype 属性，指向原型对象**；
 * 原型对象会获得一个 constructor 属性，指向关联的构造函数，也就是 `Person.prototype.constructor` 指向 Person；
 * 实例的 constructor 属性指向它的构造函数，也就是 `person.constructor === Person`，但是一旦 Person 的 prototype 属性被改写，会导致 constructor 的指向丢失：  
   ```js
