--- a/js/继承.md
+++ b/js/继承.md
@@ -44,17 +44,159 @@
 * 子类型在实例化时不能给父类型的构造函数传参，所有类型的默认值都是相同的，不能够定制化； 
 
 # 借用构造函数继承
-使用原型链继承原型上的属性和方法，而通过借用构造函数继承实例属性。这样既可以把方法定义在原型上以实现重用，又可以让每个实例都有自己的属性。来看下面的例子：
+就是在子类构造函数中调用父类构造函数，使得子类的实例上也能拥有父类的相关属性。
+来看下面的例子：
 ```js
-  function Parent () {
-    this.names = ['kevin', 'daisy'];
+  function SuperType() {
+    this.colors = ["red", "blue", "green"];
   }
-  function Child () {
-    Parent.call(this);
+  function SubType() {
+    //继承SuperType
+    SuperType.call(this);
   }
-  var child1 = new Child();
-  child1.names.push('yayu');
-  console.log(child1.names); // ["kevin", "daisy", "yayu"]
-  var child2 = new Child();
-  console.log(child2.names); // ["kevin", "daisy"]
+  let instance1 = new SubType();
+  instance1.colors.push("black");
+  console.log(instance1.colors); // "red, blue, green, black"
+  let instance2 = new SubType();
+  console.log(instance2.colors); // "red, blue, green"
+```
+子类可以向父类传递参数：
+```js
+  function SuperType(name){
+    this.name = name;
+    this.sayName = function() {
+      console.log(this.name);
+    };
+  }
+  function SubType() {
+    // 继承SuperType并传参
+    SuperType.call(this, "Nicholas");
+    // 实例属性
+    this.age = 29;
+  }
+  let instance = new SubType();
+  console.log(instance.name); // "Nicholas";
+  console.log(instance.age);   // 29
+```
+## 问题
+* 方法都在构造函数中定义，每次创建实例都会创建一遍方法。
+* 因为没有使用原型链，所以子类不能访问父类原型上定义的方法。
+
+# 组合继承
+组合模式综合了原型链模式和借用构造函数的模式；是 JavaScript 中最常用的继承模式。
+总的来说就是：**使用原型链继承原型上的属性和方法，而通过盗用构造函数继承实例属性。**
+```js
+  function SuperType(name){
+    this.name = name;
+    this.colors = ["red", "blue", "green"];
+  }
+  SuperType.prototype.sayName = function() {
+    console.log(this.name);
+  };
+  function SubType(name, age){
+    // 调用父类构造函数 继承属性
+    SuperType.call(this, name);
+    this.age = age;
+  }
+  // 调用父类构造函数 通过原型链 继承方法
+  SubType.prototype = new SuperType();
+  SubType.prototype.sayAge = function() {
+    console.log(this.age);
+  };
+  let instance1 = new SubType("Nicholas", 29);
+  instance1.colors.push("black");
+  console.log(instance1.colors);   // "red, blue, green, black"
+  instance1.sayName();               // "Nicholas";
+  instance1.sayAge();                // 29
+  let instance2 = new SubType("Greg", 27);
+  console.log(instance2.colors);   // "red, blue, green"
+  instance2.sayName();               // "Greg";
+  instance2.sayAge();                // 27
+```
+## 问题
+父类构造函数始终会被调用两次：一次在是创建子类原型时调用（用来继承方法），另一次是在子类构造函数中调用（用来继承属性）。
+
+# 原型式继承
+其实也就是 `Object.create()` 的模拟实现：
+```js
+function createObj(o) {
+  // 创建一个临时构造函数
+  function F(){}
+  // 将这个构造函数的原型指向传入的对象
+  F.prototype = o;
+  // 返回这个构造函数的实例
+  return new F();
+}
+let person = {
+  name: "Nicholas",
+  friends: ["Shelby", "Court", "Van"]
+};
+let anotherPerson = object(person);
+anotherPerson.name = "Greg";
+anotherPerson.friends.push("Rob");
+let yetAnotherPerson = object(person);
+yetAnotherPerson.name = "Linda";
+// yetAnotherPerson 修改引用类型的值，会导致 person 的值也被修改
+yetAnotherPerson.friends.push("Barbie");
+console.log(person.friends);   // "Shelby, Court, Van, Rob, Barbie"
+```
+原型式继承非常适合：你需要在两个对象之间共享属性，但是又不想创建一个构造函数，通过实例化这个构造函数来实现共享属性的时候。
+## 问题
+属性中包含的引用值始终会在相关对象间共享，跟使用原型模式是一样的
+
+# 寄生式继承
+创建一个仅用于封装继承过程的函数，该函数在内部以某种形式来做增强对象，最后返回对象。
+```js
+  function createAnother(original){
+    let clone = object(original);   // 通过调用函数创建一个新对象
+    clone.sayHi = function() {      // 以某种方式增强这个对象
+      console.log("hi");
+    };
+    return clone;              // 返回这个对象
+  }
+  let person = {
+    name: "Nicholas",
+    friends: ["Shelby", "Court", "Van"]
+  };
+  let anotherPerson = createAnother(person);
+  anotherPerson.sayHi();   // "hi"
+```
+## 问题
+跟借用构造函数模式一样，每次创建对象都会创建一遍方法。
+
+# 寄生式组合继承
+组合继承其实也存在效率问题。最主要的效率问题就是父类构造函数始终会被调用两次：一次在是创建子类原型时调用，另一次是在子类构造函数中调用。
+```js
+function Parent (name) {
+  this.name = name;
+  this.colors = ['red', 'blue', 'green'];
+}
+Parent.prototype.getName = function () {
+  console.log(this.name)
+}
+function Child (name, age) {
+  Parent.call(this, name);
+  this.age = age;
+}
+// 关键的三步
+var F = function () {};
+F.prototype = Parent.prototype;
+Child.prototype = new F();
+var child1 = new Child('kevin', '18');
+console.log(child1);
+```
+封装后：
+```js
+function object(o) {
+  function F() {}
+  F.prototype = o;
+  return new F();
+}
+function prototype(child, parent) {
+  var prototype = object(parent.prototype);
+  prototype.constructor = child;
+  child.prototype = prototype;
+}
+// 当我们使用的时候：
+prototype(Child, Parent);
 ```
