--- a/优化/虚拟长列表.md
+++ b/优化/虚拟长列表.md
@@ -1,6 +1,9 @@
 # 不定高虚拟长列表实现
 虚拟长列表的核心就是，我们需要一个元素来撑开视口的高度，然后不渲染全量的数据，而是只渲染在视口内可见的数据。
 ## 思路
+### html/css 结构
+简单来说就是一个视口元素，视口元素相对定位，视口元素下有两个子元素，一个用来撑出高度，另一个用来渲染列表；用来渲染列表的这个绝对定位，我们可以用 `top:0` + `transformY:xx` (性能好) 来保证元素始终展示在视口里；
+### js 实现
 1. 先给定一个列表项每项元素的假设高度 xHeight，用这个高度来初始化一个 cachedPositions 数组；cachedPositions 数组的长度就等于列表项的个数；同时，用来撑开视口高度的元素的高度，就是 `xHeight * cachedPositions.length`；
 2. 接下来，我们要确认首次渲染的时候要渲染的列表项元素的范围，我们可以根据视口的高度 height 和假设高度 xHeight，也就是 `height / xHeight`来粗略计算一下我们的视口可以容纳多少个列表项；
 3. 那么对于首次渲染，我们要渲染的就是列表 list 从 startIndex 0 到 endIndex `height / xHeight` 的内容；
