--- a/优化/虚拟长列表.md
+++ b/优化/虚拟长列表.md
@@ -10,7 +10,8 @@
 4. 接下来，当列表元素将要被挂载到页面上时，也就是 vue 的 mounted 钩子触发的时候，这个时候我们每个列表项的实际高度已经能够拿到了：
 5. 这个时候，我们就可以用真实的高度去更新 cachedPositions 中的假设高度；
 6. 同时因为我们一开始用来撑开视口的元素的高度，是用假设高度算出来的，所以我们也要用真实高度去对它做一个更新；
-7. 我们还要监听 scroll 事件，一旦 scroll 事件发生，就说明我们再视口中渲染的列表项要发生改变了，所以在 scroll 事件的回调里，我们要通过 scrollTop 来计算列表的 startIndex 和 endIndex；
+7. 我们还要监听 scroll 事件，一旦 scroll 事件发生，就说明我们再视口中渲染的列表项要发生改变了，所以在 scroll 事件的回调里，我们要通过 scrollTop 来计算，当前要展示的列表项，位于列表的 startIndex 和 endIndex；
+  * 如果这里可以用 二分查找 进行优化
 
 
 ```js
